첫번째 페이지

--- a/10lion1/home.html
+++ b/10lion1/home.html
@@ -16,7 +16,7 @@
         <a href="시간표.html" class="link-info">명환의 시간표</a><!--색깔 넣는 부트스트랩 사용했어요-->
         <a href="bootstrap.html" class="link-info">부트스트랩 실습</a><!--색깔 넣는 부트스트랩 사용했어요-->
     </nav>
-    <!--목록 만들기 부트스트랩 사용했어요-->
+    <!--목록 만들기 부트스트랩 사용했어요!-->
     <div class="list-group">
         <button type="button" onclick="location.href='https://www.codelion.net/ '"class="list-group-item list-group-item-action active" aria-current="true">
             멋쟁이 사자처럼
@@ -25,7 +25,7 @@
         <button type="button" onclick="location.href='https://getbootstrap.kr/'" class="list-group-item list-group-item-action">부트스트랩</button>
         <button type="button" class="list-group-item list-group-item-action" disabled>미정</button>
       </div>
-      <!--목록 만들기 부트스트랩 사용했어요-->
+      <!--목록 만들기 부트스트랩 사용했어요!-->
     <hr>
     <div class = "grid-container">
     <div class = "grid-item">
